fusion background, matching terms, simultaneous substitution

--- a/sec-4-implementation.tex
+++ b/sec-4-implementation.tex
@@ -56,3 +56,8 @@
 \end{itemize}
 
 
+The previous chapter described the design of the Accelerate language, an
+embedded DSL of operations over arrays, rich enough to express some interesting
+real-world problems. This chapter details the architecture of the embedding as
+well as the implementation of a backend for parallel execution on CUDA hardware.
+
